styles/style.css
/* ... */
.dropdownMenu .dropdownContent {
  padding-left: 0;
  margin: 0;
  max-height: 200px;
  overflow-y: scroll;
}

.subHeading {
  margin: 0;
  margin-top: 20px;
  text-align: center;
}

.genreTagsContainer {
  height: 0;
  opacity: 0;
  overflow: hidden;
  visibility: hidden;
  width: 0;
  -webkit-transition: opacity 1s ease;
  transition: opacity 1s ease;
}

.genreTags {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  list-style: none;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  padding: 0;
  width: 100%;
}

.activeSearch {
  height: auto;
  visibility: visible;
  opacity: 1;
  overflow: visible;
  width: 100%;
}

.activeSearch.formContainer {
  margin: 20px;
}

.genreTag {
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  border: 5px solid white;
  border-radius: 50%;
  color: white;
  cursor: pointer;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  font-size: 2rem;
  height: 160px;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  width: 160px;
  margin: 20px;
}

.genreTag.rnb:focus, .genreTag.rnb:hover {
  border-color: #6262b4;
  outline: none;
}

.genreTag.pop:focus, .genreTag.pop:hover {
  border-color: #fb4fb0;
  outline: none;
}

.genreTag.rock:focus, .genreTag.rock:hover {
  border-color: #fe4040;
  outline: none;
}

.genreTag.hipHop:focus, .genreTag.hipHop:hover {
  border-color: #f9b13d;
  outline: none;
}

.genreTag.kpop:focus, .genreTag.kpop:hover {
  border-color: #53e256;
  outline: none;
}

main {
  display: none;
}

.bigMain {
  display: block;
  background-color: #6c6559;
  min-height: calc(100vh - 150px - 50px);
  padding-top: 40px;
}

.resultsHeading {
  text-align: center;
  margin: 0;
}

.results {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (1fr)[4];
      grid-template-columns: repeat(4, 1fr);
  -ms-grid-rows: (1fr)[3];
      grid-template-rows: repeat(3, 1fr);
  grid-auto-rows: 1fr;
  grid-gap: 20px;
  list-style: none;
  margin: 0;
  padding: 40px 0;
}

.results .artist {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  border-radius: 10px;
  -webkit-box-shadow: 0 2px 5px 0 black;
          box-shadow: 0 2px 5px 0 black;
  background-color: #f9f9f9;
  text-align: center;
  padding: 15px;
  font-family: 'Crimson Text', serif;
  font-size: 1.5rem;
}

.results .artist a {
  font-size: 1rem;
  text-decoration: none;
  padding: 10px;
  margin-top: 10px;
  border: 1px solid black;
  color: #ab2217;
  border-radius: 3px;
}

.fa-search {
  display: none;
}

footer {
  background-color: #222;
  height: 50px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

footer p {
  margin: 0;
  color: white;
}

@media (max-width: 1250px) {
  .topPosition {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    overflow: hidden;
  }
  .topPosition .buttonContainer {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
  }
  .topPosition .topHeaderFlexContainer,
  .topPosition .bottomHeaderFlexContainer {
    -ms-flex-preferred-size: 150px;
        flex-basis: 150px;
    -ms-flex-negative: 0;
        flex-shrink: 0;
  }
  .topPosition .bottomHeaderFlexContainer {
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
  }
  .topPosition .genreTags {
    margin: 0;
  }
  .topPosition .genreTagsContainer {
    opacity: 0;
    -webkit-transition: opacity .5s .4s;
    transition: opacity .5s .4s;
  }
  .topPosition .formContainer {
    opacity: 0;
    -webkit-transition: opacity .5s .4s;
    transition: opacity .5s .4s;
  }
  .topPosition .buttonContainer .button {
    margin-right: 0;
  }
  .expandedTopPosition {
    height: 300px;
    overflow: visible;
    -webkit-transition: all 1s ease;
    transition: all 1s ease;
  }
  .expandedTopPosition .genreTagsContainer,
  .expandedTopPosition .formContainer {
    opacity: 1;
  }
}

@media (max-width: 1100px) {
  .genreTag {
    font-size: 1.3rem;
    height: 120px;
    margin: 10px;
    width: 120px;
  }
  .imageContainer {
    width: 90%;
  }
  .results {
    -ms-grid-columns: (1fr)[3];
        grid-template-columns: repeat(3, 1fr);
  }
  .results .artist {
    font-size: 1.2rem;
  }
}

@media (max-width: 750px) {
  .results {
    -ms-grid-columns: (1fr)[2];
        grid-template-columns: repeat(2, 1fr);
  }
  .topPosition .buttonContainer {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
  }
  .topPosition .buttonContainer .button {
    border-radius: 10px;
    margin: 0 10px;
    padding: 8px 15px;
  }
}
/* ... */

